@@ -27,6 +27,7 @@
  - Removed --enable-japanese-conv configure option (isn't this
    superseded by the new charset selector?).
  - Use --enable-openssl by default.
+ - xtext: deal better with invalid utf8.
  - 
 
 
